[css-grid] Avoid negative values as override containing block sizes

Add DCHECK to verify that we don't set negative values (other than -1
which means indefinite) as override containing block sizes.

Modified LayoutGrid::offsetAndBreadthForPositionedChild() to never
return negative breadths.

BUG=639620

Review-Url: https://codereview.chromium.org/2268383002
Cr-Commit-Position: refs/heads/master@{#413791}

Former-commit-id: 83e4af423ad2b700659ef45ea0790ae2f8fd30ea